resolve vertical alignment in footer

--- a/css/components/fn-footer-navigation.styl
+++ b/css/components/fn-footer-navigation.styl
@@ -3,4 +3,5 @@
   background-color lighten(c-yellow, 90%)
 
   a
+    vertical-align top
     margin-right 20px
